# LawShield

./: README.md  product_requirements.md
ai_service/: .env.example  .gitignore  docker-compose.yml  main.py  pyproject.toml  test_deadlock.py  test_graph.py  test_hang.py  test_hang_file.py  test_imports.py  test_patch.py  test_pydantic.py  test_tracing_double.py  test_tracing_error.py  test_tracing_isinstance.py
ai_service/chat/: chat_service.py  history.py  router.py
ai_service/citations/: __init__.py  builder.py  exporter.py  formatter.py  verifier.py
ai_service/communication/: __init__.py  broker.py  dispatcher.py  events.py  memory.py  message.py  protocol.py  queue.py  registry.py  router.py
ai_service/config/: settings.py
ai_service/document_processing/: __init__.py  cleaner.py  loaders.py  metadata.py  ocr.py  parser.py  router.py
ai_service/evaluation/: __init__.py  _utils.py  benchmark.py  citations.py  hallucination.py  ragas.py  retrieval.py  router.py
ai_service/graph/: graph.py  state.py
ai_service/llm/: parser.py  router.py
ai_service/masking/: __init__.py  masking_pipeline.py  ner.py  regex.py  replacement.py
ai_service/memory/: conversation.py  long_term.py  session.py  vector.py
ai_service/observability/: __init__.py  logs.py  metrics.py  monitoring.py  tracing.py
ai_service/rag/: chunking.py  embedding.py  pipelines.py  reranker.py  retrieval.py  router.py
ai_service/reasoning/: __init__.py  chain_of_thought.py  confidence.py  reviewer.py  verifier.py
ai_service/tests/: test_phase_10.py  test_phase_11.py  test_phase_12.py  (+4 more)
(+72 files in other folders)
