[project]
name = "ai-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "elasticsearch>=8.19.3",
    "fastapi>=0.139.0",
    "langchain>=1.3.11",
    "langchain-anthropic>=1.4.8",
    "langchain-elasticsearch>=1.0.0",
    "langchain-google-genai>=4.2.6",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.3",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.7",
    "opentelemetry-api>=1.43.0",
    "opentelemetry-sdk>=1.43.0",
    "paddleocr>=3.7.0",
    "paddlepaddle>=3.3.1",
    "pdfplumber>=0.11.10",
    "presidio-analyzer>=2.2.362",
    "presidio-anonymizer>=2.2.363",
    "prometheus-client>=0.25.0",
    "pydantic-settings>=2.14.2",
    "pymupdf>=1.28.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.6.0",
    "spacy>=3.8.14",
    "unstructured>=0.23.1",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
